--- a/vues/promotion.html.twig
+++ b/vues/promotion.html.twig
@@ -38,7 +38,7 @@
                                   <div class="btn-group">
                                       <button type="button" title="Modifier" class="btn btn-warning btn-flat" style="margin-right:5px;"><i class="fa fa-pencil" style="width:10px;"></i></button>
                                       <button type="button" title="Supprimer"  class="btn btn-danger btn-flat"style="margin-right:5px;"><i class="fa fa-times" style="width:10px;"></i></button>
-                                      <a href="promotion/1" title="Voir" type="button" style="margin:-2px, margin-top:0px;" class="btn btn-info btn-flat"><i class="fa fa-eye"></i></a>
+                                      <a href="promotion/1" title="Voir" type="button" style="margin:-2px; margin-top:0px;" class="btn btn-info btn-flat"><i class="fa fa-eye"></i></a>
                                   </div>
                             </th>
                           </tr>
