--- a/vues/promotion.html.twig
+++ b/vues/promotion.html.twig
@@ -37,8 +37,8 @@
                             <th style="width:90px; text-align:center;" >
                                   <div class="btn-group">
                                       <a href="promotion/1" title="Voir" type="button" style="margin-right:2px; margin-top:0px;" class="btn btn-success btn-flat"><i class="fa fa-eye"></i></a>
-                                      <button type="button" title="Modifier" class="btn btn-warning btn-flat" style="margin-right:2px;"><i class="fa fa-pencil" style="width:10px;"></i></button>
-                                      <button type="button" title="Supprimer"  class="btn btn-danger btn-flat"><i class="fa fa-times" style="width:10px;"></i></button>
+                                      <a href="#" title="Modifier" type="button" style="margin-right:2px; margin-top:0px;" class="btn btn-warning btn-flat"><i class="fa fa-pencil"></i></a>
+                                      <a href="#" title="Supprimer" type="button" style="margin-right:2px; margin-top:0px;" class="btn btn-danger btn-flat"><i class="fa fa-times"></i></a>
                                   </div>
                             </th>
                           </tr>
