--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -23,8 +23,8 @@
                             <div id="collapseOne" class="panel-collapse collapse" aria-expanded="true" style="height: 0px;">
                                 <div class="box-body">
                                     <form role="form" method="POST" action={{ path('utilisateur') }}>
-                                    <!-- text input -->
-                                        <div class="form-group">
+                                        <input type="hidden" value="ROLE_ELEVE" id="role">
+                                    <!-- text input --><div class="form-group">
                                             <label>Pseudo</label>
                                             <input type="text" id="username" name="username" class="form-control" placeholder="Pseudo">
 
@@ -52,9 +52,8 @@
                                             </div>
                                         </div>
                                         <div class="box-footer">
-                                                <button type="submit" class="btn btn-primary">Enregistrer</button>
+                                            <button type="submit" class="btn btn-primary">Enregistrer</button>
                                         </div>
-
                                     </form>
                                 </div>
                             </div>
@@ -71,6 +70,7 @@
                         <div class="box-body">
                             <form role="form" method="POST" action={{ path('utilisateur') }}>
                                 <!-- text input -->
+                                <input type="hidden" value="ROLE_PROF" id="role">
                                 <div class="form-group">
                                     <label>Pseudo</label>
                                     <input type="text" id="username" name="username" class="form-control" placeholder="Pseudo">
@@ -107,6 +107,7 @@
 
                                     <form role="form" method="POST" action={{ path('utilisateur') }}>
                                     <!-- text input -->
+                                        <input type="hidden" value="ROLE_ADMIN" id="role">
                                         <div class="form-group">
                                             <label>Pseudo</label>
                                             <input type="text" id="username" name="username" class="form-control" placeholder="Pseudo">
