--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -72,7 +72,7 @@
           <ul class="sidebar-menu">
             <li class="header">MENU</li>
               <li class="treeview">
-                  <a href="/">
+                  <a href="/{{ app.user.id }}">
                       <i class="fa fa-home"></i> <span>Accueil</span></i>
                   </a>
               </li>
