--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -1,4 +1,3 @@
-{# empty Twig template #}
 {% extends "layout.html.twig" %}
 
 {% block content %}
@@ -14,7 +13,7 @@
                  <!-- Nbre d'activités -->
                  <div class="small-box bg-green">
                     <div class="inner">
-                        {# <h3>{{ activites|length }}</h3> #}
+                        <h3>{{ activites|length }}</h3>
                         <p>Nombre d'activités enregistrées</p>
                     </div>
                     <div class="icon">
@@ -29,7 +28,7 @@
                  <!-- Competences "%" -->
                  <div class="small-box bg-red">
                      <div class="inner">
-                        {# <h3>{{ nbComp }} / {{ competences|length }}<sup style="font-size: 20px"></sup></h3> #}
+                        <h3>{{ nbComp }} / {{ competences|length }}<sup style="font-size: 20px"></sup></h3>
                          <p>Competences acquises</p>
                      </div>
                      <div class="icon">
