--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -110,7 +110,7 @@
                                     <form role="form" method="POST" action={{ path('utilisateur') }}>
                                     <!-- text input -->
                                         <div class="form-group">
-                                            <input type="hidden" value="ROLE_ADMIN" id="role">
+                                            <input type="text" id="role" name="role" class="form-control" value="ROLE_ADMIN" >
 
                                             <label>Pseudo</label>
                                             <input type="text" id="username" name="username" class="form-control" placeholder="Pseudo">
