--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -28,7 +28,7 @@
                  <!-- Competences "%" -->
                  <div class="small-box bg-red">
                      <div class="inner">
-                        <h3>{{ nbComp }} / {{ competences|length }}<sup style="font-size: 20px"></sup></h3>
+                         <h3>{{ nbComp|length }} / {{ competences|length }}<sup style="font-size: 20px"></sup></h3>
                          <p>Competences acquises</p>
                      </div>
                      <div class="icon">
