--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -43,8 +43,8 @@
                   <!-- Promotion -->
                   <div class="small-box bg-blue">
                       <div class="inner">
-                          <h3>{#{{ promotion.getLibelle }}#}<sup style="font-size: 20px"></sup></h3>
-                          <p>2015-2016</p>
+                          <h3>{{ promotion.getLibelle }}<sup style="font-size: 20px"></sup></h3>
+                          <p>{{ promotion.getAnnee }}</p>
                       </div>
                       <div class="icon">
                           <i class="ion ion-document-text"></i>
