--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <section class="content-header">
-                <h1>Bienvenue,<small>Jeune Padawan !</small></h1>
+                <h1>Bienvenue,<small>{{ app.user }}</small></h1>
     </section>
 
         <!-- Main content -->
