--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -72,7 +72,7 @@
                             <div class="form-group">
                                 <select class="form-control">
                                     {% for professeur in professeurs %}
-                                        <option value="{{ professeur.getMail }}">{{ professeur.getNom - professeur.getPrenom }}</option>
+                                        <option value="{{ professeur.getMail }}">{{ professeur.getNom }} {{ professeur.getPrenom }}</option>
                                     {% endfor %}
                                 </select>
                             </div>
