integretoutcalesroles ca pete

--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -106,15 +106,13 @@
             {% endif %}
 
             <!-- Ajouter des membres -->
-            {% if is_granted('ROLE_PROF') %}
+            {% if is_granted('ROLE_ADMIN') %}
             <li class="treeview">
                   <a href=""><i class="fa fa-user-secret"></i><span>Administration</span> <i class="fa fa-angle-left pull-right"></i></a>
                   <ul class="treeview-menu">
-                      <li><a href="utilisateur/new"><i class="fa fa-user-plus"></i>Ajouter</a></li>
+                      <li><a href="{{ path ('utilisateur/new') }}"><i class="fa fa-user-plus"></i>Ajouter</a></li>
                       <li><a href=" {{ path ('eleve') }} "><i class="fa fa-group"></i>Eleves</a></li>
-                    {% if is_granted('ROLE_ADMIN') %}
                       <li><a href=" {{ path ('professeur') }} "><i class="fa fa-user"></i>Professeurs</a></li>
-                    {% endif %}
                   </ul>
               </li>
             {% endif %}
