--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -104,13 +104,12 @@
               </a>
             </li>
             {% endif %}
-
             <!-- Ajouter des membres -->
             {% if is_granted('ROLE_ADMIN') %}
             <li class="treeview">
                   <a href=""><i class="fa fa-user-secret"></i><span>Administration</span> <i class="fa fa-angle-left pull-right"></i></a>
                   <ul class="treeview-menu">
-                      <li><a href="{{ path ('utilisateur/new') }}"><i class="fa fa-user-plus"></i>Ajouter</a></li>
+                      <li><a href="{{ path ('ajout_utilisateur') }}"><i class="fa fa-user-plus"></i>Ajouter</a></li>
                       <li><a href=" {{ path ('eleve') }} "><i class="fa fa-group"></i>Eleves</a></li>
                       <li><a href=" {{ path ('professeur') }} "><i class="fa fa-user"></i>Professeurs</a></li>
                   </ul>
