--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -46,7 +46,7 @@
                                                 <select class="form-control" id="promo" name="promo" value="">
 
                                                     {% for promotion in promotions %}
-                                                        <option value={{ promotion.getId }}>{{ promotion.getLibelle }}</option>
+                                                        <option value={{ promotion.getId }}>{{ promotion.getLibelle }} - {{ promotion.getAnnee }}</option>
                                                     {% endfor %}
 
                                                 </select>
