--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -105,7 +105,7 @@
             </li>
             {% endif %}
             <!-- Ajouter des membres -->
-            {% if is_granted('ROLE_ADMIN') %}
+            {% if is_granted('ROLE_NEXT_PROF') %}
             <li class="treeview">
                   <a href=""><i class="fa fa-user-secret"></i><span>Administration</span> <i class="fa fa-angle-left pull-right"></i></a>
                   <ul class="treeview-menu">
