retrait menu stats

--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -86,7 +86,7 @@
               </a>
             </li>
             {% endif %}
-            {% if is_granted('ROLE_ELEVE') %}
+            {% if is_granted('ROLE_AFTER_ELEVE') %}
             <li class="treeview">
               <a href="{{ path('competence') }}">
                 <i class="fa fa-graduation-cap"></i> <span>Compétences</span></i>
