--- a/vues/voir_promotion.html.twig
+++ b/vues/voir_promotion.html.twig
@@ -36,7 +36,7 @@
                             <th>{{ eleve.getUsername() }}</th>
                             <th style="width:60px; text-align:center;" >
                                   <div class="btn-group">
-                                      <button type="button" title="Voir" class="btn btn-warning btn-flat" style="margin-top:5px;margin-left:1px;"><a href="/activite/{{ eleve.getId() }}"></a><i class="fa fa-eye" style="width:10px;"></i></button>
+                                      <a href="promotion/{{ eleve.getId() }}" title="Voir" type="button" style="margin-right:2px; margin-top:0px;" class="btn btn-success btn-flat"><i class="fa fa-eye"></i></a>
                                   </div>
                             </th>
                           </tr>
