--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -15,7 +15,7 @@
                     <div class="panel box box-primary">
                         <div class="box-header with-border">
                             <h4 class="box-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" class="collapsed">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" class="collapsed">
                                 Eleve
                                 </a>
                             </h4>
@@ -100,7 +100,7 @@
             <div class="panel box box-success">
                 <div class="box-header with-border">
                     <h4 class="box-title">
-                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" class="" aria-expanded="true">
+                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" class="" aria-expanded="false">
                         Admin
                         </a>
                     </h4>
