Affichage action discerne

--- a/vues/activite.html.twig
+++ b/vues/activite.html.twig
@@ -26,7 +26,9 @@
                         <th>Libelle</th>
                         <th>Description</th>
                         <th>Competences</th>
-                        <th style="width:60px;">Action</th>
+                        {% if is_granted('ROLE_ELEVE') %}
+                            <th style="width:60px;">Action</th>
+                        {% endif %}
                       </tr>
                     </thead>
                     <tbody>
@@ -41,12 +43,14 @@
                                  {{  competence.getReference() }}
                               {%  endfor %}
                             </th>
-                            <th style="width:60px; text-align:center;" >
-                              <div class="btn-group">
-                                <button type="button" title="Modifier" class="btn btn-warning btn-flat" style="margin-right:5px;"><i class="fa fa-pencil" style="width:10px;"></i></button>
-                                <button type="button" title="Supprimer"  class="btn btn-danger btn-flat"><i class="fa fa-times"></i></button>
-                              </div>
-                            </th>
+                            {% if is_granted('ROLE_ELEVE') %}
+                                <th style="width:60px; text-align:center;" >
+                                    <div class="btn-group">
+                                        <button type="button" title="Modifier" class="btn btn-warning btn-flat" style="margin-right:5px;"><i class="fa fa-pencil" style="width:10px;"></i></button>
+                                        <button type="button" title="Supprimer"  class="btn btn-danger btn-flat"><i class="fa fa-times"></i></button>
+                                    </div>
+                                </th>
+                            {% endif %}
                           </tr>
                         {% endfor %}
                     </tbody>
@@ -58,7 +62,9 @@
                         <th>Libelle</th>
                         <th>Description</th>
                         <th>Competences</th>
-                        <th>Action</th>
+                        {% if is_granted('ROLE_ELEVE') %}
+                            <th>Action</th>
+                        {% endif %}
                       </tr>
                     </tfoot>
                   </table>
