--- a/vues/competence.html.twig
+++ b/vues/competence.html.twig
@@ -30,7 +30,7 @@
                         <th>Description</th>
                         <th>Obligatoire</th>
                         {% if is_granted('ROLE_PROF') %}
-                        <th style="width:60px;">Action</th>
+                            <th style="width:60px;">Action</th>
                         {% endif %}
                     </tr>
                 </thead>
@@ -65,7 +65,7 @@
                         <th>Description</th>
                         <th>Obligatoire</th>
                         {% if is_granted('ROLE_PROF') %}
-                        <th style="width:30px; text-align:center;">Action</th>
+                            <th>Action</th>
                         {% endif %}
                     </tr>
                 </tfoot>
