--- a/vues/voir_promotion.html.twig
+++ b/vues/voir_promotion.html.twig
@@ -45,9 +45,9 @@
                     <tfoot>
                       <tr>
                         <th>Numero</th>
-                        <th>Annee</th>
-                        <th>Libelle</th>
-                        <th>Nb d'eleves</th>
+                        <th>Nom</th>
+                        <th>Prenom</th>
+                        <th>Username</th>
                         <th>Action</th>
                       </tr>
                     </tfoot>
