--- a/vues/activite.html.twig
+++ b/vues/activite.html.twig
@@ -4,7 +4,8 @@
 <section class="content-header">
     <h1>
         Activites
-        <small>liste</small><a href="{{ path('ajout_activite') }}" type="button" style="float:right;margin:-2px" class="btn bg-orange btn-flat margin"><i class="fa fa-plus"></i><span style="margin:3px;">Ajouter</span></a>
+        <small>liste</small>
+        <a href="{{ path('ajout_activite') }}" type="button" style="float:right;margin:-2px" class="btn bg-orange btn-flat margin"><i class="fa fa-plus"></i><span style="margin:3px;">Ajouter</span></a>
     </h1>
         </section>
 
