--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -50,7 +50,7 @@
           </a>
           <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
-              <li>
+              <li class="dropdown user user-menu">
                 <span class="logo-lg"><b>{{ app.user.username }}</b></span>
               </li>
               <li>
