--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -51,7 +51,7 @@
           <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
               <li class="dropdown user user-menu">
-                <span class="logo-lg"><b>{{ app.user.username }}</b></span>
+                <span class="hidden-xs"><b>{{ app.user.username }}</b></span>
               </li>
               <li>
               {% if app.user %}
