--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -51,7 +51,7 @@
           <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
               <li class="dropdown user user-menu">
-                <a href="#" class="dropdown-toggle" date-toggle="dropdown" aria-expanded="false">
+                <a class="dropdown-toggle">
                   <span class="hidden-xs"><b>{{ app.user.username }}</b></span>
                 </a>
               </li>
