--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -50,7 +50,7 @@
           </a>
           <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
-              <li class="dropdown user user-menu">
+              <li class="dropdown">
                 <a class="dropdown-toggle">
                   <span class="hidden-xs"><b>{{ app.user.username }}</b></span>
                 </a>
