--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -20,7 +20,7 @@
                                 </a>
                             </h4>
                         </div>
-                            <div id="collapseOne" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                            <div id="collapseOne" class="panel-collapse collapse in" aria-expanded="false" style="height: 0px;">
                                 <div class="box-body">
                                     <form role="form" method="POST" action={{ path('utilisateur') }}>
                                     <!-- text input --><div class="form-group">
@@ -105,7 +105,7 @@
                         </a>
                     </h4>
                 </div>
-                <div id="collapseThree" class="panel-collapse collapse in" aria-expanded="false">
+                <div id="collapseThree" class="panel-collapse collapse" aria-expanded="false">
                                 <div class="box-body">
 
                                     <form role="form" method="POST" action={{ path('utilisateur') }}>
