--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -20,7 +20,7 @@
                                 </a>
                             </h4>
                         </div>
-                            <div id="collapseOne" class="panel-collapse collapse in" aria-expanded="false" style="height: 0px;">
+                            <div id="collapseOne" class="panel-collapse collapse in" aria-expanded="false">
                                 <div class="box-body">
                                     <form role="form" method="POST" action={{ path('utilisateur') }}>
                                     <!-- text input --><div class="form-group">
@@ -100,7 +100,7 @@
             <div class="panel box box-success">
                 <div class="box-header with-border">
                     <h4 class="box-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" class="" aria-expanded="false">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false">
                          Admin
                         </a>
                     </h4>
