--- a/vues/acceuil_admin_prof.html.twig
+++ b/vues/acceuil_admin_prof.html.twig
@@ -8,7 +8,7 @@
         <div class="box-body">
             <div class="row">
                 <div class="col-lg-3 col-xs-6">
-                    <div class="small-box bg-yellow">
+                    <div class="small-box bg-blue">
                         <div class="inner">
                             ??
                             <p> Eleves enregistrés </p>
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-xs-6">
-                    <div class="small-box bg-yellow">
+                    <div class="small-box bg-green">
                         <div class="inner">
                             ??
                             <p> Promotions enregistrés </p>
