--- a/vues/acceuil_admin_prof.html.twig
+++ b/vues/acceuil_admin_prof.html.twig
@@ -45,7 +45,21 @@
                             <i class="ion ion-person-add"></i>
                         </div>
                         <a href="{{ path ('ajout_promotion') }}" class="small-box-footer">
-                            Ajouter un utilisateur
+                            Ajouter une Promotion
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-xs-6">
+                    <div class="small-box bg-green">
+                        <div class="inner">
+                            ??
+                            <p> Promotions enregistrés </p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-university"></i>
+                        </div>
+                        <a href="{{ path ('ajout_promotion') }}" class="small-box-footer">
+                            Admin
                         </a>
                     </div>
                 </div>
