--- a/vues/acceuil_admin_prof.html.twig
+++ b/vues/acceuil_admin_prof.html.twig
@@ -42,7 +42,7 @@
                             <p> Promotions enregistrés </p>
                         </div>
                         <div class="icon">
-                            <i class="ion ion-person-add"></i>
+                            <i class="ion ion-university"></i>
                         </div>
                         <a href="{{ path ('ajout_promotion') }}" class="small-box-footer">
                             Ajouter une Promotion
@@ -53,13 +53,13 @@
                     <div class="small-box bg-green">
                         <div class="inner">
                             ??
-                            <p> Promotions enregistrés </p>
+                            <p> Admin </p>
                         </div>
                         <div class="icon">
-                            <i class="ion ion-university"></i>
+                            <i class="ion ion-android-lock"></i>
                         </div>
                         <a href="{{ path ('ajout_promotion') }}" class="small-box-footer">
-                            Admin
+                            Administration
                         </a>
                     </div>
                 </div>
