--- a/vues/acceuil_admin_prof.html.twig
+++ b/vues/acceuil_admin_prof.html.twig
@@ -39,7 +39,7 @@
                     <div class="small-box bg-green">
                         <div class="inner">
                             ??
-                            <p> Promotions enregistrés </p>
+                            <p>Promotions enregistrés</p>
                         </div>
                         <div class="icon">
                             <i class="ion ion-university"></i>
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-xs-6">
-                    <div class="small-box bg-green">
+                    <div class="small-box bg-black">
                         <div class="inner">
                             ??
                             <p> Admin </p>
