--- a/vues/acceuil_admin_prof.html.twig
+++ b/vues/acceuil_admin_prof.html.twig
@@ -10,7 +10,7 @@
                 <div class="col-lg-3 col-xs-6">
                     <div class="small-box bg-blue">
                         <div class="inner">
-                            ??
+                            <h3>??</h3>
                             <p> Eleves enregistrés </p>
                         </div>
                         <div class="icon">
@@ -24,7 +24,7 @@
                 <div class="col-lg-3 col-xs-6">
                     <div class="small-box bg-red">
                         <div class="inner">
-                            ??
+                            <h3>??</h3>
                             <p> Professeurs enregistrés </p>
                         </div>
                         <div class="icon">
@@ -50,9 +50,9 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-xs-6">
-                    <div class="small-box bg-black">
+                    <div class="small-box bg-orange">
                         <div class="inner">
-                            ??
+                            <h3>??</h3>
                             <p> Admin </p>
                         </div>
                         <div class="icon">
