Accueil Admin/prof

--- a/vues/acceuil_admin_prof.html.twig
+++ b/vues/acceuil_admin_prof.html.twig
@@ -1,4 +1,5 @@
 {% extends "layout.html.twig" %}
+
 {% block content %}
     <section class="content-header">
         <h1>Bienvenue, <small>{{ app.user.nom }} {{ app.user.prenom }}</small></h1>
@@ -10,7 +11,8 @@
                 <div class="col-lg-3 col-xs-6">
                     <div class="small-box bg-blue">
                         <div class="inner">
-                            <h4>??</h4>
+                            <h3>??</h3>
+
                             <p> Eleves enregistrés </p>
                         </div>
                         <div class="icon">
@@ -24,7 +26,8 @@
                 <div class="col-lg-3 col-xs-6">
                     <div class="small-box bg-red">
                         <div class="inner">
-                            <h4>??</h4>
+                            <h3>??</h3>
+
                             <p> Professeurs enregistrés </p>
                         </div>
                         <div class="icon">
@@ -38,7 +41,8 @@
                 <div class="col-lg-3 col-xs-6">
                     <div class="small-box bg-green">
                         <div class="inner">
-                            <h4>??</h4>
+                            <h3>??</h3>
+
                             <p>Promotions enregistrés</p>
                         </div>
                         <div class="icon">
@@ -50,9 +54,10 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-xs-6">
-                    <div class="small-box bg-orange">
+                    <div class="small-box bg-aqua">
                         <div class="inner">
-                            <h4>??</h4>
+                            <h3>123</h3>
+
                             <p> Admin </p>
                         </div>
                         <div class="icon">
@@ -63,9 +68,8 @@
                         </a>
                     </div>
                 </div>
+
             </div>
         </div>
-
     </section>
-
 {% endblock %}
